--- a/package.json
+++ b/package.json
@@ -21,17 +21,23 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/firebase": "^3.9.0",
+        "@ionic-native/google-plus": "^4.1.0",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/cli-plugin-cordova": "^1.4.0",
         "@ionic/cli-plugin-ionic-angular": "^1.3.1",
         "@ionic/storage": "2.0.1",
+        "angularfire2": "^2.0.0-beta.8",
         "cordova-android": "^6.2.3",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-firebase": "^0.1.23",
+        "cordova-plugin-googleplus": "^5.1.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "firebase": "^4.2.0",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -53,7 +59,11 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-firebase": {},
+            "cordova-plugin-googleplus": {
+                "REVERSED_CLIENT_ID": "767074418891-03oqo1leubkicjla22picesqldk0g8rb.apps.googleusercontent.com"
+            }
         },
         "platforms": [
             "android"
