--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/facebook": "^4.1.0",
     "@ionic-native/firebase": "^3.14.0",
+    "@ionic-native/geolocation": "^4.1.0",
     "@ionic-native/google-plus": "^4.1.0",
+    "@ionic-native/sms": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/cli-plugin-cordova": "^1.4.0",
@@ -70,7 +72,8 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "1437191219700844",
         "APP_NAME": "Sanjeevani"
-      }
+      },
+      "cordova-sms-plugin": {}
     },
     "platforms": [
       "android"
