--- a/package.json
+++ b/package.json
@@ -1,86 +1,86 @@
 {
-    "name": "scympac",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "scympac",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/core": "3.12.1",
+    "@ionic-native/facebook": "^4.1.0",
+    "@ionic-native/firebase": "^3.14.0",
+    "@ionic-native/geolocation": "^4.1.0",
+    "@ionic-native/google-plus": "^4.1.0",
+    "@ionic-native/native-storage": "^4.1.0",
+    "@ionic-native/sms": "^4.1.0",
+    "@ionic-native/splash-screen": "3.12.1",
+    "@ionic-native/status-bar": "3.12.1",
+    "@ionic/cli-plugin-cordova": "^1.4.0",
+    "@ionic/cli-plugin-ionic-angular": "^1.3.1",
+    "@ionic/storage": "2.0.1",
+    "angularfire2": "^4.0.0-rc.1",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-firebase": "^0.1.23",
+    "cordova-plugin-googleplus": "^5.1.1",
+    "cordova-plugin-nativestorage": "^2.2.2",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.2",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-sms-plugin": "~0.1.11",
+    "firebase": "^4.2.0",
+    "ionic-angular": "3.6.0",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "promise-polyfill": "^6.0.2",
+    "rxjs": "5.4.0",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.12"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "2.1.3",
+    "@ionic/cli-plugin-cordova": "1.6.2",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "typescript": "2.3.4"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "767074418891-03oqo1leubkicjla22picesqldk0g8rb.apps.googleusercontent.com"
+      },
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "1437191219700844",
+        "APP_NAME": "Sanjeevani"
+      },
+      "cordova-sms-plugin": {},
+      "cordova-plugin-nativestorage": {}
     },
-    "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/core": "3.12.1",
-        "@ionic-native/facebook": "^4.1.0",
-        "@ionic-native/firebase": "^3.14.0",
-        "@ionic-native/geolocation": "^4.1.0",
-        "@ionic-native/google-plus": "^4.1.0",
-        "@ionic-native/native-storage": "^4.1.0",
-        "@ionic-native/sms": "^4.1.0",
-        "@ionic-native/splash-screen": "3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic/cli-plugin-cordova": "^1.4.0",
-        "@ionic/cli-plugin-ionic-angular": "^1.3.1",
-        "@ionic/storage": "2.0.1",
-        "angularfire2": "^4.0.0-rc.1",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-facebook4": "^1.9.1",
-        "cordova-plugin-firebase": "^0.1.23",
-        "cordova-plugin-googleplus": "^5.1.1",
-        "cordova-plugin-nativestorage": "^2.2.2",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "firebase": "^4.2.0",
-        "ionic-angular": "3.6.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "promise-polyfill": "^6.0.2",
-        "rxjs": "5.4.0",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12",
-        "cordova-sms-plugin": "~0.1.11"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "2.1.3",
-        "@ionic/cli-plugin-cordova": "1.6.2",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "typescript": "2.3.4"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-googleplus": {
-                "REVERSED_CLIENT_ID": "767074418891-03oqo1leubkicjla22picesqldk0g8rb.apps.googleusercontent.com"
-            },
-            "cordova-plugin-firebase": {},
-            "cordova-plugin-facebook4": {
-                "APP_ID": "1437191219700844",
-                "APP_NAME": "Sanjeevani"
-            },
-            "cordova-sms-plugin": {},
-            "cordova-plugin-nativestorage": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
