--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sms-plugin": "~0.1.11",
+        "cordova-sms-plugin": "^0.1.11",
         "cordova-sqlite-storage": "^2.0.4",
         "firebase": "^4.2.0",
         "ionic-angular": "3.6.0",
